# cactus

./: .graphify_detect.json  .graphifyignore  README.md  hvx-dev-setup.md  mkdocs.yml
.github/: assemble-docs.sh
.github/workflows/: deploy-docs.yml  docs.yml  publish_to_hf.yml  release.yml
android/: CMakeLists.txt  Cactus.android.kt  Cactus.kt  README.md  cactus_jni.cpp
apple/: CmakeLists.txt  README.md
blog/: README.md  turboquant-h.md  turboquant_embeddings.md
cactus/: CMakeLists.txt
cactus-engine/: CMakeLists.txt  cactus_engine.h
cactus-engine/engine/: engine.h  engine_constraints.cpp  engine_model.cpp  engine_tokenizer.cpp
cactus-engine/ffi/: cactus_embed.cpp  cactus_transcribe.cpp
cactus-engine/models/: model.h  model_parakeet_tdt.cpp  model_whisper.cpp
cactus-engine/src/: cloud.cpp  complete.cpp  constraints.cpp  engine.h  graph_ffi.cpp  model.cpp  transcribe.cpp  utils.h
cactus-engine/tests/: CMakeLists.txt  chat.cpp  run.sh  test_telemetry.cpp  test_utils.h
cactus-graph/: CMakeLists.txt  cactus_graph.h
cactus-graph/src/: builder.cpp  core.cpp  execute.cpp  io.cpp  npu.cpp  npu_ane.h  npu_ane.mm  ops_math.cpp  ops_nn.cpp  ops_tensor.cpp  param_io.cpp
cactus-graph/tests/: test_nn.cpp  test_ops.cpp
cactus-kernels/: CMakeLists.txt  cactus_kernels.h
cactus-kernels/src/: attention.cpp  blas.cpp  conv.cpp  fused.cpp  i8mm.cpp  lstm.cpp  matmul.cpp  nn.cpp  quants.cpp  reduce.cpp  scalar.cpp  threading.h  utils.h
cactus-kernels/tests/: test_matmul.cpp  test_quant.cpp  test_reduce.cpp  test_tq.cpp  test_utils.h  tq_weight_loader.h
cactus-kernels/tests/assets/: tq2_embed_tokens_64rows.weights  tq4_ffn_gate_64rows.weights
cactus-transpile/: CMakeLists.txt
cactus-transpile/engine/: engine_constraints.cpp
cactus-transpile/ffi/: cactus_complete.cpp  cactus_embed.cpp  cactus_ffi.h  cactus_graph.cpp  cactus_init.cpp
cactus-transpile/graph/: graph.h  graph_builder.cpp  graph_execute.cpp  graph_io.cpp  graph_ops_math.cpp  graph_ops_nn.cpp  graph_ops_tensor.cpp  graph_param_io.cpp
cactus-transpile/kernel/: kernel.h  kernel_attention.cpp  kernel_blas.cpp  kernel_conv.cpp  kernel_nn.cpp  kernel_reduce.cpp  kernel_scalar.cpp  kernel_utils.h
cactus/engine/: engine.h  engine_constraints.cpp  engine_model.cpp  engine_sp.cpp  engine_tokenizer.cpp
cactus/ffi/: cactus_complete.cpp  cactus_ffi.h  cactus_graph.cpp  cactus_init.cpp  cactus_transcribe.cpp  cactus_utils.h
cactus/graph/: graph.h  graph_builder.cpp  graph_execute.cpp  graph_io.cpp  graph_ops_math.cpp  graph_ops_nn.cpp  graph_ops_tensor.cpp  graph_param_io.cpp
cactus/kernel/: kernel.h  kernel_blas.cpp  kernel_conv.cpp  kernel_matmul.cpp  kernel_reduce.cpp  kernel_scalar.cpp
cactus/models/: model.h  model_parakeet.cpp  model_parakeet_tdt.cpp  model_whisper.cpp
docs/: cactus_engine.md  cactus_graph.md  index.md
flutter/: README.md
graphify-out/: .graphify_python
python/: README.md  pyproject.toml  requirements.txt  test_gemma_inference_transpiled.py
python/examples/: compare_gemma4_multimodal.py  compare_parakeet_performance.py  inspect_gemma4_cleanup.py  inspect_transpile_cleanup.py  test_torch_capture.py  transpile_hf_causal_lm.py  transpile_hf_model.py
python/src/: __init__.py  cactus.py  cli.py  converter.py  converter_adapters.py  cq_download.py  downloads.py  graph.py  graph_test.py  weight_adapters.py  weight_patterns.py
python/tests/: adapter_conversion_matrix.py  test_cli_run_transpiled.py  test_cli_transpile_defaults.py  test_converter_adapters.py  test_cq_download.py  test_gemma_like_graph.py  test_graph.py  test_optimize_gemma4_attention.py  test_transpile_backend_gaps.py  test_transpile_debug_matrix.py  test_transpile_gemma.py  (+9 more)
tests/: CMakeLists.txt  run.sh  test_gemma4_suite.cpp  test_gemma4_thinking.cpp  test_graph.cpp  test_kernel.cpp  test_llm.cpp  test_performance.cpp  test_stt.cpp
(+102 files in other folders)
